docs(mp): 小程序插件版本变更文档补充startLocalDownload

--- a/changelog/3.0.0版本xp2p插件变更日志.md
+++ b/changelog/3.0.0版本xp2p插件变更日志.md
@@ -51,6 +51,12 @@ p2pModule.getModule(p2pModule.DeviceVersion.Device_2_3).reset()
 
 **修改** `getLocalXp2pInfo`函数，获取本地的peername。现在调用该函数需要传入要获取初始化好的p2p模块所对应的版本号，推荐使用`getModule`来获取本地的peername
 
+**修改** `startLocalDownload`方法入参，该函数用于下载录像文件，原先的调用方式`startLocalDownload({ urlParams: '_crypto=off&channel=0&file_name=xxx&offset=0' })`，在2.0.4版本的插件中做了调整，将加密参数提取出来，单独作为一个参数`offCrypto`来进行传递，最新的调用方式如下：
+```javascript
+// offCrypto指明是否下载（不）加密的视频
+p2pModule.startLocalDownload(ipcId, { urlParams: params, offCrypto: false })
+```
+> 该函数在2.0.4版本的插件中做了调整， 如果从2.0.4版本以上升级到3.0.0则不需要关注该函数，但如果是从2.0.3及以下版本直接升级到3.0.0版本，对该函数的调用需要注意参数的调整
 ## 提示
 
 接入3.x.x版本(兼容版本)的注意事项:
