docs(changelog): 添加3.0.1版本的变更日志

--- a/changelog/3.0.0版本xp2p插件变更日志.md
+++ b/changelog/3.0.0版本xp2p插件变更日志.md
@@ -1,3 +1,7 @@
+# 3.0.1 xp2p插件变更日志
+- 修复设备断开连接后，未正确处理eof逻辑的问题
+- 修复某些情况下使用udp6返回空的`data.local.address`时导致流程报错的问题
+
 # 3.0.0 xp2p插件变更日志
 
 此次变更为打断性更新，不兼容之前的版本，即1.x.x版，2.x.x版
