docs(changelog): 3.0.1插件变更

--- a/changelog/3.0.0版本xp2p插件变更日志.md
+++ b/changelog/3.0.0版本xp2p插件变更日志.md
@@ -1,3 +1,48 @@
+# 3.0.1 xp2p插件变更日志
+- 修复设备断开连接后，未正确处理eof逻辑的问题
+```javascript
+// 下载视频文件示例：
+const file = { file_name: 'p2p_demo_file.mp4' };
+const params = `channel=0&file_name=${file.file_name}&offset=0`;
+
+// 临时文件路径
+const filePath = `${wx.env.USER_DATA_PATH}/${file.file_name.replace('/', '_')}`;
+
+// 使用FileSystemManager组装文件
+const fileSystemManager = wx.getFileSystemManager();
+
+p2pModule.startLocalDownload(ipcId, { urlParams: params }, {
+  onChunkReceived: (chunk) => {
+    // 接收chunk包并组装文件
+    fileSystemManager.appendFileSync(filePath, chunk, 'binary')
+  },
+  onComplete: () => {
+    // 流结束了，会触发onComplete回调函数
+    // 保存组装的临时视频文件到相册
+    wx.saveVideoToPhotosAlbum({
+      filePath,
+      success(res) {
+        // saved file handler
+      },
+      fail(res) {
+        // Error handler
+      }
+    });
+  },
+  onSuccess: () => {
+    // 下载成功了，此时拿到的数据是完整的了
+  },
+  onFailure: (result) => {
+    // http.status >= 400 && http.status < 600 会触发这个事件
+    // Error handler
+  },
+  onError: (result) => {
+    // 网络传输错误，虽然http.status 为 200， 但下载过程中失败了。会触发这个事件
+  },
+});
+```
+- 修复某些情况下使用udp6返回空的`data.local.address`时导致流程报错的问题
+
 # 3.0.0 xp2p插件变更日志
 
 此次变更为打断性更新，不兼容之前的版本，即1.x.x版，2.x.x版
